Fixed bug: font-size in footer was too big

--- a/css/profile.css
+++ b/css/profile.css
@@ -6,7 +6,7 @@
     border: 1px solid black;
 }
 
-p {
+main p {
     font-size: 20px;
     margin-bottom: 10px;
 }
